--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npm cache clean --force && npm install",
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,7 +28,8 @@
     "express-validator": "^7.0.1",
     "json": "^11.0.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.0.3",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nice-invoice": "^1.0.5",
